VEX-353 Adjusted new member EP, groupUuid is paired with public keys in request